Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1343

Stat system doesn't check buffer sizes

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.2.0, 3.0.5
    • 3.3.0
    • None
    • None

    Description

      The stat system when generating the stat pages will crash if stat names are long, there is currently no check that you aren't overflowing the buffer. Patch on will be attached soon.

      Attachments

        1. RecCore.patch
          3 kB
          Brian Geffon

        Activity

          People

            briang Brian Geffon
            briang Brian Geffon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: