[TS-1343] stat system doesn't check for buffer overflow